tests/baselines/reference/assignmentCompatability26.errors.txt
tests/cases/compiler/assignmentCompatability26.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ one: 文字; }'.
  Types of property 'one' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/assignmentCompatability26.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var aa:{one:string;};;
        export var __val__aa = aa;
    }
    __test2__.__val__aa = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ one: 文字; }'.
!!! error TS2322:   Types of property 'one' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.